--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,11 +6,11 @@
       hashtag: slony
       ldjson: yes
       answer: |
-          На слонах можно покататься (Калим,Най Харн)
-          Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат
-          Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
-          Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
-          Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
+          На слонах можно покататься (Калим,Най Харн).
+		  Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат.
+		  Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
+		  Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
+		  Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
     - question: Где есть тигры на пхукете?   
       hashtag: tigry
       ldjson: yes
@@ -23,8 +23,8 @@
       answer: |
           В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
           Смотровая площядка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
-          Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
-          На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение! 
+		  Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
+		  На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение!
     - question: Смотровые площадки Пхукетa 
       hashtag: smotrovie
       ldjson: yes
@@ -208,7 +208,8 @@
         
           Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг. Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать.
           
-          При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться. 
+          При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
+		  
     - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
       hashtag: hotelyoung
       ldjson: yes
@@ -234,15 +235,16 @@
       hashtag: rentayahta
       ldjson: yes
       answer: |
-         Цена аренды яхты или катера на Пхукете зависит от типа яхты и маршрута и варьируется в пределах от 13 000 до 670 000 бат/сутки, что соответствует от 400 до 21000 долларов.        
+         Цена аренды яхты или катера на Пхукете зависит от типа яхты и маршрута и варьируется в пределах от 13 000 до 670 000 бат/сутки, что соответствует от 400 до 21000 долларов.
+          
     - question: Могу ли я арендовать автомобиль на Пхукете?
       hashtag: rentacar
       ldjson: yes
       answer: |
         * В Тайланде очень опасно на дорогах,так что нужно иметь страховку, если её нет лучше походить пешком.Есть аренда авто
           и аренда байков.
-          Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
-          Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
+		  Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
+		  Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
     - question: Как добраться из аэропорта Пхукета до Као Лак?
       hashtag: Хэш
       ldjson: yes
@@ -353,11 +355,11 @@
       hashtag: chdhphuket
       ldjson: yes
       answer: |
-          Тайцы очень любят детей. Вы всегда сможете найти все условия для пребывания с детьми. Ни где не будут смотреть косо, если ваш ребенок кричит, плачет и тд...не стоит бояться.
+       Тайцы очень любят детей. Вы всегда сможете найти все условия для пребывания с детьми. Ни где не будут смотреть косо, если ваш ребенок кричит, плачет и тд...не стоит бояться.
        
-          Везде помогут если попросите. 
+       Везде помогут если попросите. 
        
-          На пхукете легко будет найти няню - тайку, филипинку, бирманку...и даже русскую, если так хочется.  Берут не дорого, могут еды приготовить и в доме убрать.
+       На пхукете легко будет найти няню - тайку, филипинку, бирманку...и даже русскую, если так хочется.  Берут не дорого, могут еды приготовить и в доме убрать.
       
     - question: Что взять с собой на Пхукет с ребенком?
       hashtag: chdhphuket
@@ -504,7 +506,7 @@
       hashtag: phuketplazhsamolet
       ldjson: yes
       answer: |
-          Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
+         Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
     - question: Дикие пляжи пхукета.
       hashtag: phuketplazhdikiy
       ldjson: yes
@@ -537,12 +539,12 @@
       hashtag: phuketribalka
       ldjson: yes
       answer: | 
-         Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
+        Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
     - question: Разрешена ли рыбалка на пхукете с берега.
       hashtag: phuketribalkabereg
       ldjson: yes
       answer: | 
-         Ловля рыбы с берега на удочку на Пхукете разрешена, но запрещена на соседних островах у коралловых рифов и в морских национальных парках. Местные обычно ловят рыбу рано утром, вечером или ночью, популярные места: пирс Раваи, скалы у пляжа Януй, скалы справа от пляжа Сурин, пляж Майкао
+        Ловля рыбы с берега на удочку на Пхукете разрешена, но запрещена на соседних островах у коралловых рифов и в морских национальных парках. Местные обычно ловят рыбу рано утром, вечером или ночью, популярные места: пирс Раваи, скалы у пляжа Януй, скалы справа от пляжа Сурин, пляж Майкао
 - question: Посольство
   hashtag:  posolstvo
   items:
@@ -550,8 +552,8 @@
       hashtag: posolstvophucet
       ldjson: yes
       answer: | 
-         Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
-         Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
+        Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
+        Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
 - question: Банки
   hashtag:  banki
   items:
@@ -559,15 +561,15 @@
       hashtag: schetvbanke
       ldjson: yes
       answer: |
-          Для открытия счёта в банке Крунгсри 
-        - загранпаспорт со штампом о пребывании на месяц 
-        - миграционная карта - лист об отбытии (Departure Card)
-        - договор на аренду жилья (сроком не менее, чем на 6-ть месяцев)
-        - копия с подписью id card того человека, который, по договору, сдаёт вам в аренду жильё
-        - копия с подписью загранпаспорта того человека, который, по договору, сдаёт вам в аренду жильё 
-        - копия с подписью документа подтверждающего право собственности сдаваемого в аренду жилья 
-        - местная сим-карта, для того, чтобы подключить мобильный банк и интернет-банкинг
-        Когда вы проверили и убедились, что этот список документов у вас присутствует, вы отправляетесь в отделение банка Krungsri (Thailand). На входе говорите сотруднику, что вы хотите открыть счёт и получить карту или сами получаете талон на терминале о том, что вам необходимо открыть счёт в их банке (open account). Получаете талон и ждёте своей очереди.
+       Для открытия счёта в банке Крунгсри 
+       - загранпаспорт со штампом о пребывании на месяц 
+       - миграционная карта - лист об отбытии (Departure Card)
+       - договор на аренду жилья (сроком не менее, чем на 6-ть месяцев)
+       - копия с подписью id card того человека, который, по договору, сдаёт вам в аренду жильё
+       - копия с подписью загранпаспорта того человека, который, по договору, сдаёт вам в аренду жильё 
+       - копия с подписью документа подтверждающего право собственности сдаваемого в аренду жилья 
+       - местная сим-карта, для того, чтобы подключить мобильный банк и интернет-банкинг
+       Когда вы проверили и убедились, что этот список документов у вас присутствует, вы отправляетесь в отделение банка Krungsri (Thailand). На входе говорите сотруднику, что вы хотите открыть счёт и получить карту или сами получаете талон на терминале о том, что вам необходимо открыть счёт в их банке (open account). Получаете талон и ждёте своей очереди.
 - question: Виза
   hashtag:  viza
   items:
@@ -575,11 +577,26 @@
       hashtag: vizaprodlenie
       ldjson: yes
       answer: |
-        * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
-- question: Услуги
-  hashtag:  uslugi	
+	 * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
+- question: Язык
+  hashtag:  language
   items: 
-    - question: Где сделать маникюр на пхукете?
-      hashtag: manikur
+    - question: Где можно выучить английский на пхукете?
+      hashtag: eng
       ldjson: yes
-      answer: | 
+      answer: |
+	 * Три самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг Walen Language School Phuket, Lingua Plus Language School Phuket и TTT Language School Phuket. В первых двух вам предложат курсы английского и тайского языков, в последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
+- question: Места
+  hashtag:  mesta
+  items:   
+    - question: Где находиться пхукет таун?
+      hashtag:  phucettown
+      ldjson: yes
+      answer: |
+	  	Пхукет Таун (Phuket Town) - столица и самый крупный город провинции Пхукет, расположен в юго-восточной части острова, на берегу Пхукетского залива Андаманского моря Индийского океана.
+		На автобусе можно доехать с Карона на Ката бич или наоборот. В настоящее время большинство русских туристов отдыхает на Кате или на Кароне. Маршрут стартует с улицы Ранонг, как и все остальные. Автобус проходит через таун и поворачивает в районе Централ Фестиваль.
+    - question: Где находиться фруктовый рынок на пхукете?
+      hashtag:  phucetrinok
+      ldjson: yes
+      answer: |
+	    Фруктовый рынок, расположенный на Ranong Rd., считается одним из самых старых на Пхукете, раньше сюда приезжали пираты. Здесь продают всевозможные фрукты, которые привозят прямо с плантаций и ферм.
