--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,7 +6,9 @@
       hashtag: slony
       ldjson: yes
       answer: |
-          На слонах можно покататься (Калим,Най Харн).
+          
+        * На слонах можно покататься (Калим,Най Харн).
+         
           Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат.
           Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
@@ -15,7 +17,9 @@
       hashtag: tigry
       ldjson: yes
       answer: |
-          Tiger Kingdom – в районе Кату перед перевалом на Патонг (Важно сейчас в этом парке нет маленьких тигров, только большие и средние) Общение с тиграми, которым от 2 месяцев до полутора лет, обойдется в 900—1300 бат. Новорожденных тигрят показывают за 2,5 тыс. Комплексный билет, позволяющий попасть в клетки ко всем зверям, стоит 3700 бат. Вход на территорию для детей — 500 бат.
+       
+        * Tiger Kingdom – в районе Кату перед перевалом на Патонг (Важно сейчас в этом парке нет маленьких тигров, только большие и средние) Общение с тиграми, которым от 2 месяцев до полутора лет, обойдется в 900—1300 бат. Новорожденных тигрят показывают за 2,5 тыс. Комплексный билет, позволяющий попасть в клетки ко всем зверям, стоит 3700 бат. Вход на территорию для детей — 500 бат.
+        
           Tiger Park Phuket – новый парк с тиграми на Пхукете по дороге на Биг Будду.Цена не зависит от возраста, для детей и взрослых она одинакова,новорожденные тигрята (2-4 месяца) - 1300 бат, маленькие тигрята (5-10 месяцев) - 900 бат, средние тигры (11-15 месяцев) - 900 бат, взрослые (16-36 месяцев) - 1000 бат.
     - question: Где посмотреть обезьян на пхукете?  
       hashtag: obeziany
@@ -153,6 +157,16 @@
 - question: Еда, питание
   hashtag: food
   items:
+  - question: Где купить русские продукты на пхукете?
+      hashtag: russianproduct
+      ldjson: yes
+      answer: |
+         
+        * Магазин русских продуктов находится по адресу - Chalong, Mueang Phuket District, Phuket
+
+          Время работы с 7 до 21. 
+          Так же есть Villa Market - Boat Avenue Phuket (Laguna) по адресу 49/13 Bandon-Cherngtalay Rd Cherngtalay Phuket 83110. 
+          Время работы  с 8 до 20. (Есть возможность доставки)  
     - question: Где на Пхукете поесть мясо крокодила?
       hashtag: crocodile
       ldjson: yes
@@ -204,17 +218,20 @@
       hashtag: cheaphousing
       ldjson: yes
       answer: |
-        * Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей  это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке ресепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
+       
+       * Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей  это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке ресепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
         
           Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг. Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать.
           
           При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
-		  
+ 
     - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
       hashtag: hotelyoung
       ldjson: yes
       answer: |
+        
         * Если документально будет подтверждено Ваше родство, то вопросов не возникнет, но есть ряд отелей, класса люкс, которые настолько дорожат своей репутацией, что могут отказать в заселение, но это будет сделано заранее или же будет предоставлено место в другом отеле, просто на улицу никого не выгонят.
+
 - question: Валюта
   hashtag: currency
   items:
@@ -231,7 +248,26 @@
 - question: Транспорт
   hashtag: transport
   items:
-    - question: Есть ли аренда яхт на пхукете?
+   - question: Такси на пхукете.
+      hashtag: taksiphucet
+      ldjson: yes
+      answer: |
+        
+       * Такси на Пхукете из аэропорта
+        
+         Здесь у вас будет выбор из двух вариантов так называемые официальные такси в Таиланде Taxi Meter и лимузин-сервис. Дешевле по стоимости Taxi Meter, но буквально на 50-100 бат.
+       
+       * Приблизительные цены
+       
+         Тук-туки. По маршруту Карон-Патонг – 350 бат (10, 68 USD), Ката-Патонг – 500 бат (15,26 USD).
+         Мото-саи. Из Карона в Патонг придется заплатить 250 бат (7,63 USD).
+         Taxi meter. Из аэропорта до Патонга – 800 бат (24,41 USD), Карон-Ката – 900 бат (27,46 USD).
+         Корса такси. Из аэропорта до Карона можно доехать за 770 бат (23, 50 USD), до Патонга – за 680 бат (20,75 USD).
+         «Тройка». Поездка из аэропорта на пляжи Ката и Карон обойдется в 800 бат (24,41 USD).
+         
+        * Обычное такси — от 35 бат за посадку и первые 2 км пути. Стоимость километра пути зависит от общего расстояния и дорожных условий. Например, расстояние в пределах 5 км оплачивается — от 5 бат за 1 км, расстояния в пределах 10 км — 6,5 бат.
+   
+   - question: Есть ли аренда яхт на пхукете?
       hashtag: rentayahta
       ldjson: yes
       answer: |
@@ -243,8 +279,8 @@
       answer: |
         * В Тайланде очень опасно на дорогах,так что нужно иметь страховку, если её нет лучше походить пешком.Есть аренда авто
           и аренда байков.
-		  Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
-		  Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
+          Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
+          Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
     - question: Как добраться из аэропорта Пхукета до Као Лак?
       hashtag: Хэш
       ldjson: yes
@@ -327,7 +363,16 @@
 - question: Правила,Законы,Службы
   hashtag: cpolitica
   items:
-    - question: Какие правила вывоза животных с Пхукета?
+   - question: Нужны ли права на пхукете для езды на байке?
+      hashtag: pravanaupravlenie
+      ldjson: yes
+      answer: |
+         
+         * Для управления транспортом в Тайланде в обязательном порядке требуется международное водительское удостоверение (МВУ). 
+         
+         * Для получения МВУ не требуется сдавать никаких экзаменов, нужно только оплатить пошлину. Заказать их проще всего на сайте госуслуги.рф, стоимость со скидкой составит 1120 рублей. Можно обратиться в ГИБДД или МФЦ лично, но тогда МВУ обойдется в 1600 рублей (цена 2021 года). Забрать права после их изготовления можно в ГИБДД или в МФЦ.  
+         * Несмотря на устоявшееся мнение, что права для управления скутером в Тайланде не нужны, на самом деле здесь уже давно действует закон, согласно которому для управления любым механическим транспортным средством, к которым приравниваются и маломощные мопеды и скутеры, на дорогах общественного пользования в Тайланде необходимо наличие водительского удостоверения.
+   - question: Какие правила вывоза животных с Пхукета?
       hashtag: animalphuket
       ldjson: yes
       answer: |
@@ -552,8 +597,10 @@
       hashtag: posolstvophucet
       ldjson: yes
       answer: | 
-        Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
-        Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
+       
+       * Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
+       
+       Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
 - question: Банки
   hashtag:  banki
   items:
@@ -561,7 +608,9 @@
       hashtag: schetvbanke
       ldjson: yes
       answer: |
-       Для открытия счёта в банке Крунгсри 
+       
+       * Для открытия счёта в банке Крунгсри 
+       
        - загранпаспорт со штампом о пребывании на месяц 
        - миграционная карта - лист об отбытии (Departure Card)
        - договор на аренду жилья (сроком не менее, чем на 6-ть месяцев)
@@ -577,7 +626,9 @@
       hashtag: vizaprodlenie
       ldjson: yes
       answer: |
-	 * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
+       
+       * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
+
 - question: Язык
   hashtag:  language
   items: 
@@ -585,7 +636,7 @@
       hashtag: eng
       ldjson: yes
       answer: |
-	 * Три самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг Walen Language School Phuket, Lingua Plus Language School Phuket и TTT Language School Phuket. В первых двух вам предложат курсы английского и тайского языков, в последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
+      * Три самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг: Walen Language School Phuket, Lingua Plus Language School Phuket и TTT Language School Phuket. В первых двух вам предложат курсы английского и тайского языков, в последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
 - question: Места
   hashtag:  mesta
   items:   
@@ -593,10 +644,35 @@
       hashtag:  phucettown
       ldjson: yes
       answer: |
-	  	Пхукет Таун (Phuket Town) - столица и самый крупный город провинции Пхукет, расположен в юго-восточной части острова, на берегу Пхукетского залива Андаманского моря Индийского океана.
-		На автобусе можно доехать с Карона на Ката бич или наоборот. В настоящее время большинство русских туристов отдыхает на Кате или на Кароне. Маршрут стартует с улицы Ранонг, как и все остальные. Автобус проходит через таун и поворачивает в районе Централ Фестиваль.
+       
+       * Пхукет Таун (Phuket Town) - столица и самый крупный город провинции Пхукет, расположен в юго-восточной части острова, на берегу Пхукетского залива Андаманского моря Индийского океана.
+         
+         На автобусе можно доехать с Карона на Ката бич или наоборот. В настоящее время большинство русских туристов отдыхает на Кате или на Кароне. Маршрут стартует с улицы Ранонг, как и все остальные. Автобус проходит через таун и поворачивает в районе Централ Фестиваль.
     - question: Где находиться фруктовый рынок на пхукете?
       hashtag:  phucetrinok
       ldjson: yes
       answer: |
-	    Фруктовый рынок, расположенный на Ranong Rd., считается одним из самых старых на Пхукете, раньше сюда приезжали пираты. Здесь продают всевозможные фрукты, которые привозят прямо с плантаций и ферм.
+       
+       * Фруктовый рынок, расположенный на Ranong Rd., считается одним из самых старых на Пхукете, раньше сюда приезжали пираты. Здесь продают всевозможные фрукты, которые привозят прямо с плантаций и ферм.
+
+- question: Рынки
+  hashtag:  rinki
+  items:
+    - question: Самые большие рынки пхукета.
+      hashtag:  rinkibolshie
+      ldjson: yes
+      answer: |
+      
+      * Викенд или Нака Маркет - Самый большой рынок на Пхукете. Ещё его называют Санди или просто Найт Маркет в Пхукет-тауне. Любой таксист знает это место, городские автобусы останавливаются на перекрёстке.Время работы: пятница, суббота и воскресенье с 16:00 до 23:00.
+
+      * Таланг Стрит Маркет - Жемчужина Пхукета — ярмарка на улице Таланг в Пхукет-тауне. Её ещё называют Лаад Яй. Рынок был организован для привлечения внимания к культуре острова и его истории. Для тайцев из других провинций Таланг Стрит Маркет — место must see. На ярмарке нет подделок, белых туник со слоном и подобных сувениров. Продавцы выставляют хэнд-мейд товары, необычные футболки, коллекционные игрушки, объёмные открытки, резные изделия из дерева, лакированные тарелочки. Время работы: по воскресеньям с 16:00 до 23:00.
+
+      * Ярмарка Чилва Маркет - Новая хипстерская ярмарка расположена недалеко от большого Теско Лотуса в Пхукет-тауне. Такой формат рынков пришёл из Бангкока. Основная идея — по-chill-ить с друзьями, отдохнуть, поесть и что-нибудь прикупить. Чилва Маркет популярен у тайцев, в последнее время приезжает всё больше туристов.Время работы: четверг, пятница, суббота с 17:00 до 23:00
+
+      * Ночной рынок на Кароне у храма - Туристическая ярмарка разворачивается 2 раза в неделю у храма на пляже Карон. Её можно назвать мини-филиалом Нака Маркета. Если вы живёте на Кароне, за шопингом стоит отправиться сюда. Торговцы продают сувениры, пляжную одежду, футболки с надписью Thailand, купальники, сумки, чемоданы, косметику, украшения и другие безделушки — всё, чем интересуются туристы.Время работы: вторник и пятница с 16:00 до 23:00.
+
+      * Рыбный рынок Раваи - Улочка рынка морепродуктов начинается от пирса Равай. Не стоит ждать громадной площади, где вам наперебой предлагают рыбу и лобстеров. Рынок вытянулся метров на 200. Сначала сидят торговки сувениров из жемчуга и ракушек. Пройдите прямо и увидите множество столов с разнообразными морскими гадами. Рыбаки каждое утро привозят на рынок свой улов. Некоторые ракушки ещё плюются, крабы шевелятся, лобстеры плавают в воде — все морепродукты свежайшие. Цены дороже, чем в супермаркетах Макро или Теско Лотус. Время работы: каждый день с 11:00 до 21:00.
+
+      * Продуктовый рынок на улице Ранонг - Самый дешёвый рынок, где можно купить фрукты, расположен в Пхукет-тауне на улице Ранонг. Тайцы называют его Даунтаун Маркет (Downtown Market). Под торговые площади выделен двухэтажный комплекс. И некоторые продавцы раскладывают свой товар прямо вдоль улицы. Цены минимальные. Некоторые торговцы продают готовую еду, делают блинчики роти и простые тайские блюда.Время работы: каждый день с 2:00 до 9:00.
+ 
+      * Ярмарка Экспо - Крытая ярмарка находится недалеко от торгового центра Робинсон в Пхукет-тауне. В магазинчиках вы найдёте большой выбор недорогой одежды, обуви, сумок и аксессуаров. Ассортимент схож с рынками на пляжах. И встречаются нетуристические товары. Тайцы покупают в Экспо брюки и юбки для офиса, джинсы, карнавальные костюмы, футболки с принтами, школьную форму, детскую одежду.Время работы: каждый день с 10:00 утра до 21:00.
