--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -10,7 +10,8 @@
         * На слонах можно покататься (Калим,Най Харн).
         
           Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат.
-          Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
+           
+          Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
           Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
     - question: Где есть тигры на пхукете?  
