--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -666,3 +666,13 @@
         * Продуктовый рынок на улице Ранонг - Самый дешёвый рынок, где можно купить фрукты, расположен в Пхукет-тауне на улице Ранонг. Тайцы называют его Даунтаун Маркет (Downtown Market). Под торговые площади выделен двухэтажный комплекс. И некоторые продавцы раскладывают свой товар прямо вдоль улицы. Цены минимальные. Некоторые торговцы продают готовую еду, делают блинчики роти и простые тайские блюда.Время работы: каждый день с 2:00 до 9:00.
         
         * Ярмарка Экспо - Крытая ярмарка находится недалеко от торгового центра Робинсон в Пхукет-тауне. В магазинчиках вы найдёте большой выбор недорогой одежды, обуви, сумок и аксессуаров. Ассортимент схож с рынками на пляжах. И встречаются нетуристические товары. Тайцы покупают в Экспо брюки и юбки для офиса, джинсы, карнавальные костюмы, футболки с принтами, школьную форму, детскую одежду.Время работы: каждый день с 10:00 утра до 21:00.
+
+- question: Доставка
+  hashtag: delivery
+  items:
+    - question: Есть ли доставка еды на пхукете?
+      hashtag: dostavka
+      ldjson: yes
+      answer: |
+        
+        * В разных районах Пхукета работают отдельные кафе и рестораны, предлагающие доставку по району. Обычно у них есть листовки с меню. Доставка может быть бесплатной или за дополнительные 40-50 бат. И ещё один вариант для заказа еды — приложение Grab.
