--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -221,9 +221,9 @@
         * Такое понятие, как агентство аренды жилья в Тайланде на Пхукет не совсем корректно, так как необходимости в их услугах у тех, кто приезжает на несколько месяцев нет (дешевле самому пройтись по кондоминиумам и поговорить на месте, чем обращаться в агентство).
           Если же планируется заблаговременная аренда недвижимости на Пхукете, лучше сделать это через интернет-сайты, благо их сейчас огромное количество и каждый борется за своего клиента различными способами.
           Вот небольшой список сайтов, где мы рекомендуем бронировать
-          1. [Booking.com](Booking)
-          2. [Tripping.com](Tripping)
-          3. [www.indreamsphuket.ru](indreamsphuket)
+          1. (Booking.com)[Booking]
+          2. (Tripping.com)[Tripping]
+          3. (www.indreamsphuket.ru)[indreamsphuket]
     - question: Где на Пхукете жить дешевле всего?
       hashtag: cheaphousing
       ldjson: yes
