--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -479,7 +479,7 @@
       answer: |
        * 121 and 121/1 Moo 7 Nanai soi 8 Tambon Thepkasattre Ampur Thalang, Thalang District, Phuket 83110, Таиланд
         Время работы - с 8 до 20
-        Можете ознакомиться на сайте [http://phuket.ortox.ru/](Храм Святой Троицы)
+        Можете ознакомиться на сайте [Храм Святой Троицы](http://phuket.ortox.ru/)
     - question: Как проехать до Большого Будды (Big Budda) на Пхукете?
       hashtag: khramphuketbud
       ldjson: yes
