--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -11,9 +11,9 @@
         
           Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат.
            
-          Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
+          Най Харн - Время работы с 8.30 до 17.00 (Выезд каждый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
-          Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
+          Бесплатный трансфер до "Най Харн" с Патонг,Карон,Ката.
     - question: Где есть тигры на пхукете?  
       hashtag: tigry
       ldjson: yes
@@ -27,7 +27,7 @@
       ldjson: yes
       answer: |
         В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
-        Смотровая площядка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
+        Смотровая площадка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
         Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
         На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение!
     - question: Смотровые площадки Пхукетa
@@ -394,7 +394,7 @@
       ldjson: yes
       answer: |
         * Абсолютный запрет на вывоз касается -
-        порнографии,предметов с изображением флага королевства, наркотиков;,фальшивых денег, ценных бумаг,предметов, нарушающие права интеллектуальной собственности (например, нелицензионные программы)
+        порнографии,предметов с изображением флага королевства, наркотиков,фальшивых денег, ценных бумаг,предметов, нарушающие права интеллектуальной собственности (например, не лицензионные программы)
         иного контрафакта,в таиланде запрещены ЛЮБЫЕ фальшивые деньги. игрушка это или прикол...вообще не важно...было много случаев с реальным сроком.
         
         * В разумных количествах можно вывозить фрукты, растения, но без земли, кошку,собаку, вроде больше никаких других животных нельзя. а то часто покупают обезьяну
